--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.482.0",
     "mongoose": "^8.11.0",
     "next": "15.2.2",
