--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -29,10 +30,12 @@
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.482.0",
     "mongoose": "^8.11.0",
+    "motion": "^12.6.2",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "prisma": "^6.5.0",
+    "qss": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
