--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.1.27",
     "@ai-sdk/react": "^1.1.25",
+    "@clerk/elements": "^0.23.8",
     "@clerk/nextjs": "^6.12.5",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
@@ -40,6 +41,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
+    "react-window": "^1.8.11",
     "recoil": "^0.7.7",
     "remark-gfm": "^4.0.1",
     "svix": "^1.61.4",
@@ -54,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4.0.14",
