--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "motion": "^12.6.2",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "postcss": "^8.5.3",
     "prisma": "^6.5.0",
     "qss": "^3.0.0",
